--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>vue-manage-system</title>
-  <link rel="stylesheet" href="https://at.alicdn.com/t/font_830376_qzecyukz0s.css">
+  <title>康荣老人家后台管理系统</title>
+  <link rel="shortcut icon" type="image/x-icon" href="../src/assets/img/bitbug_favicon.ico">
+</head>
 </head>
 
 <body>
