--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>康荣老人家后台管理系统</title>
-  <link rel="icon" href="../src/assets/img/bitbug_favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" />
   <style>
     .item-loader-container {
       position: fixed;
